<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/producto"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#128475"
            android:gravity="center_vertical"
            android:text="@string/subtotal"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/jabo_n_de_manos_x1"
            android:textColor="#454545"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/_2"
            android:textAlignment="textEnd"
            android:textColor="#454545" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/jab_n_de_manos_x1"
            android:textColor="#454545"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/_101"
            android:textAlignment="textEnd"
            android:textColor="#454545" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/pastas_duria_x2"
            android:textColor="#454545"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/_18"
            android:textAlignment="textEnd"
            android:textColor="#454545" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/detergente_limpiadin_x1"
            android:textColor="#454545"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/_13"
            android:textAlignment="textEnd"
            android:textColor="#454545" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="#373737"
            android:foregroundGravity="center" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#373737"
            android:backgroundTint="#000000"
            android:foregroundGravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/subtotal1"
            android:textAlignment="textEnd"
            android:textColor="#128575"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/_43"
            android:textAlignment="textEnd"
            android:textColor="#454545" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/costo_env_o"
            android:textAlignment="textEnd"
            android:textColor="#128575"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/_10"
            android:textAlignment="textEnd"
            android:textColor="#454545" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/cup_n"
            android:textAlignment="textEnd"
            android:textColor="#128575"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/_5"
            android:textAlignment="textEnd"
            android:textColor="#454545" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#128575"
            android:gravity="center_vertical"
            android:text="@string/total"
            android:textAlignment="textEnd"
            android:textColor="#128575"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:text="@string/_48"
            android:textAlignment="textEnd"
            android:textColor="#454545" />
    </TableRow>

</TableLayout>